--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles//variables";
+@import "../../styles/variables";
 
 .header{
     position: fixed;
@@ -27,97 +27,98 @@
         }
     }
 
-    &__nav{
+}
+//     &__nav{
 
-        @media screen and (max-width: 37.5em) {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100vh;
-            width: 100vw;
-            background-image: linear-gradient(220deg, $primary-color, $primary-color-dark);
-            background-size: 700%;
-            animation: footerBack 10s ease-out infinite;
-            animation: animateNav .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-        }
+//         @media screen and (max-width: 37.5em) {
+//             position: absolute;
+//             top: 0;
+//             left: 0;
+//             height: 100vh;
+//             width: 100vw;
+//             background-image: linear-gradient(220deg, $primary-color, $primary-color-dark);
+//             background-size: 700%;
+//             animation: footerBack 10s ease-out infinite;
+//             animation: animateNav .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+//         }
 
-        & ul{
-            @media screen and (max-width: 37.5em) {
-                text-align: center;
-                width: 100%;
-                height: 100%;
-                transform: translateY(20%);
-            }
+//         & ul{
+//             @media screen and (max-width: 37.5em) {
+//                 text-align: center;
+//                 width: 100%;
+//                 height: 100%;
+//                 transform: translateY(20%);
+//             }
 
-            & > :not(:last-child){
-                margin-right: 2rem;
+//             & > :not(:last-child){
+//                 margin-right: 2rem;
 
-                @media screen and (max-width: 37.5em) {
-                    margin-right: 0;
-                    margin-bottom: 5rem;
-                }
-            }
-        }
+//                 @media screen and (max-width: 37.5em) {
+//                     margin-right: 0;
+//                     margin-bottom: 5rem;
+//                 }
+//             }
+//         }
 
-        &___list{
-            list-style-type: none;
-            display: inline-block;
-            animation: moveInRight 1.2s ease-out;
-            animation-fill-mode: backwards;
+//         &___list{
+//             list-style-type: none;
+//             display: inline-block;
+//             animation: moveInRight 1.2s ease-out;
+//             animation-fill-mode: backwards;
 
-            @media screen and (max-width: 37.5em) {
-                display: block;
-                animation: none;
-            }
+//             @media screen and (max-width: 37.5em) {
+//                 display: block;
+//                 animation: none;
+//             }
 
             
-            &0001{
-                animation-delay: 0.2s;
-            }
-            &0002{
-                animation-delay: 0.4s;
-            }
+//             &0001{
+//                 animation-delay: 0.2s;
+//             }
+//             &0002{
+//                 animation-delay: 0.4s;
+//             }
 
-        }
+//         }
 
-        &___links{
-            display: inline-block;
-            cursor: pointer;
-            color:  #fff;
-            line-height: 3rem;
-        }
-        &___links::after,
-        &___links::before{
-            content: "";
-            display: block;
-            position: relative;
-            background-color: #fff;
-            width: 100%;
-            height: .8px;
-            transform: scaleX(0);
-            transition: all .3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-        }
+//         &___links{
+//             display: inline-block;
+//             cursor: pointer;
+//             color:  #fff;
+//             line-height: 3rem;
+//         }
+//         &___links::after,
+//         &___links::before{
+//             content: "";
+//             display: block;
+//             position: relative;
+//             background-color: #fff;
+//             width: 100%;
+//             height: .8px;
+//             transform: scaleX(0);
+//             transition: all .3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+//         }
 
-        &___links::after{
-            transform-origin: left;
-        }
+//         &___links::after{
+//             transform-origin: left;
+//         }
 
-        &___links::before{
-            transform-origin: right;
-        }
+//         &___links::before{
+//             transform-origin: right;
+//         }
 
-        &___links:hover::after{
-            transform: scaleX(1);
-            transform-origin: right;
-        }
+//         &___links:hover::after{
+//             transform: scaleX(1);
+//             transform-origin: right;
+//         }
 
-        &___links:hover::before{
-            transform: scaleX(1);
-            transform-origin: left;
-        }
-    }
+//         &___links:hover::before{
+//             transform: scaleX(1);
+//             transform-origin: left;
+//         }
+//     }
 
-}
+// }
 
 
 
@@ -166,34 +167,34 @@
 
 
 
-        @keyframes footerBack {
+//         @keyframes footerBack {
 
-            0%{background-position:0% 50%}
-            50%{background-position:100% 50%}
-            100%{background-position:0% 50%}
-        }
-@keyframes animateNav {
-    0%{
-        transform: scale(1.2);
-        opacity: 0;
-    }
+//             0%{background-position:0% 50%}
+//             50%{background-position:100% 50%}
+//             100%{background-position:0% 50%}
+//         }
+// @keyframes animateNav {
+//     0%{
+//         transform: scale(1.2);
+//         opacity: 0;
+//     }
 
-    100%{
-        transform: scale(1);
-        opacity: 1;
-    }
-}
+//     100%{
+//         transform: scale(1);
+//         opacity: 1;
+//     }
+// }
 
-@keyframes moveInRight {
-    0%{
-      opacity: 0;
-      transform: translateX(10rem);
-    }
-    80%{
-      transform: translate(-1rem);
-    }
-    100%{
-      opacity: 1;
-      transform: translate(0);
-    }
-  }
+// @keyframes moveInRight {
+//     0%{
+//       opacity: 0;
+//       transform: translateX(10rem);
+//     }
+//     80%{
+//       transform: translate(-1rem);
+//     }
+//     100%{
+//       opacity: 1;
+//       transform: translate(0);
+//     }
+//   }
