--- a/src/components/Header/mobileNav/mobileNav.module.scss
+++ b/src/components/Header/mobileNav/mobileNav.module.scss
@@ -107,7 +107,7 @@
         display: none;
         position: absolute;
         right: 0;
-        padding: 0 1rem;
+        padding: 2rem;
         margin-right: 1rem; } }
     @media screen and (max-width: 37.5em) and (max-width: 37.5em) {
       .main_navigation__button {
