--- a/src/components/contact/contact.module.scss
+++ b/src/components/contact/contact.module.scss
@@ -105,7 +105,7 @@
                 position: relative;
                 display: block;
                 width: 70%;
-                height: .8px;
+                height: 1px;
                 background-color: rgba($secondary-color, .5);
                 margin-top: 2rem;
 
