--- a/src/components/Header/desktopNav/desktopNav.module.scss
+++ b/src/components/Header/desktopNav/desktopNav.module.scss
@@ -16,8 +16,8 @@
         &___list{
             list-style-type: none;
             display: inline-block;
-            animation: moveInRight 1.2s ease-out;
-            animation-fill-mode: backwards;
+            // animation: moveInRight 1.2s ease-out;
+            // animation-fill-mode: backwards;
 
             
             &0001{
