--- a/src/components/Header/mobileNav/mobileNav.module.scss
+++ b/src/components/Header/mobileNav/mobileNav.module.scss
@@ -58,7 +58,7 @@
         &___links{
             display: inline-block;
             cursor: pointer;
-            color:  #fff;
+            color:  $secondary-color;
             line-height: 3rem;
         }
         &___links::after,
