--- a/src/components/banner/bannerBox/Hello/Hello.module.scss
+++ b/src/components/banner/bannerBox/Hello/Hello.module.scss
@@ -1,8 +1,8 @@
 .bannerbox__hello{
     
     color: #fff;
-    animation: moveInLeft 1.5s ease-out;
-    animation-fill-mode: backwards;
+    // animation: moveInLeft 1.5s ease-out;
+    // animation-fill-mode: backwards;
     
 
 
