--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -53,7 +53,7 @@ body p{
   position: relative;
 }
 @media screen and (min-width: 1100px) {
-  .banner_container,,
+  .banner_container,
   .container{
       width: 1100px;
     }
